k8s/deployment.yaml
### This file is used to automatically deploy the application to the development environment.
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-backend-PR_NUMBER
spec:
  selector:
    app: scrumlr-PR_NUMBER
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-deployment-PR_NUMBER
  labels:
    app: scrumlr-PR_NUMBER
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-PR_NUMBER
  template:
    metadata:
      labels:
        app: scrumlr-PR_NUMBER
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: scrumlr
          securityContext:
            allowPrivilegeEscalation: false
          image: ghcr.io/inovex/scrumlr.io/scrumlr-server
          args:
            - "-disable-check-origin"
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              memory: "100Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-frontend-PR_NUMBER
spec:
  selector:
    app: frontend-PR_NUMBER
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-PR_NUMBER
  labels:
    app: frontend-PR_NUMBER
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-PR_NUMBER
  template:
    metadata:
      labels:
        app: frontend-PR_NUMBER
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          securityContext:
            allowPrivilegeEscalation: false
          image: ghcr.io/inovex/scrumlr.io/scrumlr-frontend
          resources:
            requests:
              cpu: "10m"
              memory: "50Mi"
            limits:
              memory: "100Mi"
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-landing-page-PR_NUMBER
spec:
  selector:
    app: landing-page-PR_NUMBER
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-PR_NUMBER
  labels:
    app: landing-page-PR_NUMBER
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page-PR_NUMBER
  template:
    metadata:
      labels:
        app: landing-page-PR_NUMBER
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: landing-page
          securityContext:
            allowPrivilegeEscalation: false
          image: ghcr.io/inovex/scrumlr.io-landing-page/image:latest
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
          ports:
            - containerPort: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: scrumlr-ingressroute-PR_NUMBER
  annotations:
    external-dns.alpha.kubernetes.io/target: ingress.dev.scrumlr.fra.ics.inovex.io.
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`PR_NUMBER.development.scrumlr.fra.ics.inovex.io`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: scrumlr-backend-PR_NUMBER
          port: 8080
    - match: Host(`PR_NUMBER.development.scrumlr.fra.ics.inovex.io`) && (PathPrefix(`/static`) || PathPrefix(`/locales`) || PathPrefix(`/login`) || PathPrefix(`/board`) || PathPrefix(`/new`) || PathPrefix(`/legal`) || PathPrefix(`/emoji-data`) || Path(`/timer_finished.mp3`) || Path(`/hotkeys.pdf`))
      kind: Rule
      services:
        - name: scrumlr-frontend-PR_NUMBER
          port: 80
    - match: Host(`PR_NUMBER.development.scrumlr.fra.ics.inovex.io`)
      kind: Rule
      services:
        - name: scrumlr-landing-page-PR_NUMBER
          port: 80

  tls:
    secretName: scrumlr-development-certificate-PR_NUMBER
